--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="display-9 fw-bold container"><a href="./Weather-HW-01/index.html">FORECAST MARKUP in REACT</a>
+    <div class="display-9 fw-bold container"><a href="./Weather-HW-01/index.html">FORECAST MARKUP in REACT by CLASS</a>
     </div>
 
 </body>
