--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
     <div class="display-9 fw-bold container"><a href="./Weather-HW-01/index.html">FORECAST MARKUP in REACT by CLASS</a>
     </div>
-
+    <div class="display-9 fw-bold container"><a href="./Blog-HW-01/index.html">BLOG MARKUP in REACT by CLASS</a>
+    </div>
 </body>
 
 </html>
